tests/int01_err.json.err
Parse error at line 1

001: {"val": 01}
             ^
Leading zero in number!
